# service-orchestrator

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  test.sh
examples/tests/: schema.json  schema2.json
src/: auth.rs  body.rs  helpers.rs  main.rs  misc.rs  storage.rs  subscribe.rs  tests.rs
