[package]
name = "humanbios-orchestrator"
version = "0.0.1"
authors = ["kittyandrew <kitty@maudrew.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera_templates", "postgres_pool"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
# blake3 = "0.3.7"
# chrono = { version = "0.4", features = ["serde"] }
# rand = "0.7.3"
# either = "1.6.1"
# tokio = "0.3.5"
# dynfmt = { version = "0.1.4", features = ["curly"] }
