[package]
name = "service-orchestrator"
version = "0.0.7"
authors = ["kittyandrew <kitty@maudrew.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["tera_templates", "postgres_pool"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
url = "2.2.0"
rand = { version = "0.8.3" }
jsonschema = "0.6.0"
# blake3 = "0.3.7"
# chrono = { version = "0.4", features = ["serde"] }
# tokio = "0.3.5"
# dynfmt = { version = "0.1.4", features = ["curly"] }
